@@ -51,8 +51,11 @@ public:
   void add(const delta &d);		
   void prepend(const delta &); /* sf-add.c */
 
+  // These two methods should b const, but are not because they 
+  // call build_seq_table().
   const bool delta_at_seq_exists(seq_no seq);
   const delta & delta_at_seq(seq_no seq);
+
   const delta *find(sid id) const; 
   const delta *find_any(sid id) const; // includes removed deltas.
   delta *find(sid id); 
